--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://blackcrisis1.github.io/my-app",
+  "homepage": "https://blackcrisis1.github.io/my-resume",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
