--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
+    "ityped": "^1.0.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-scroll-motion": "^0.2.1",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^0.2.4"
   },
